S04 ex4 areglo con nltk y SpaCy

--- a/S04_3_exercises_after.ipynb
+++ b/S04_3_exercises_after.ipynb
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "import nltk\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
-    "from nltk.stem import PorterStemmer, WordNetLemmatizer\n",
+    "from nltk.stem import PorterStemmer, WordNetLemmatizer, SnowballStemmer\n",
     "from nltk.tag import pos_tag\n",
     "import es_core_news_sm\n",
     "import spacy"
@@ -129,22 +129,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['alquiler', 'de', 'coche', 'buenas', 'tardes', 'soy', 'alba', 'he', 'alquilad', 'un', 'coche', 'para', 'e', 'pr', 'xim', 'fin', 'de', 'semana', 'y', 'me', 'gustar', 'a', 'saber', 'd', 'nde', 'deb', 'recoger', 'y', 'viv', 'en', 'barcelona', 'buenas', 'tardes', 'alba', 'muchas', 'gracias', 'por', 'llamar', 'y', 'viv', 'en', 'un', 'pueb', 'a', '20', 'minutos', 'de', 'barcelona', 'crees', 'que', 'podr', 'as', 'venir', 'a', 'recoger', 'e', 'viernes', 'depende', 'de', 'a', 'qu', 'hora', 'ya', 'que', 'e', 'viernes', 'trabaj', 'me', 'vendr', 'a', 'bien', 'entre', 'las', '17', '00h', 'y', 'las', '19', '00h', 'c', 'm', '', 'tienes', '', 'teng', 'complicad', 'acab', 'de', 'trabajar', 'a', 'las', '18', '30', 'y', 'cre', 'que', 'n', 'me', 'dar', 'a', 'tiemp', 'c', 'm', 'te', 'ir', 'a', 'e', 's', 'bad', 'a', 'primera', 'hora', 'si', 'vinieses', 'antes', 'de', 'las', '9', '00h', 'me', 'vendr', 'a', 'bien', 'pues', 'si', 'te', 'parece', 'bien', 'te', 'avis', 'cuand', 'salga', 'de', 'barcelona', 'sobre', 'las', '8', '00h', 'as', 'cuand', 'llegues', 'ya', 'est', 'tod', 'list', 'genia', 'alba', 'quedamos', 'as', 'te', 'esper', 'e', 's', 'bad', 'antes', 'de', 'las', '9', '00h']\n"
+      "['alquil', 'de', 'coch', '\\n', 'buen', 'tard', ',', 'soy', 'alba', '.', 'he', 'alquil', 'un', 'coch', 'par', 'el', 'proxim', 'fin', 'de', 'seman', 'y', 'me', 'gust', 'sab', 'dond', 'deb', 'recog', '.', 'yo', 'viv', 'en', 'barcelon', '.', '\\n', 'buen', 'tard', 'alba', ',', 'much', 'graci', 'por', 'llam', '.', 'yo', 'viv', 'en', 'un', 'puebl', 'a', '20', 'minut', 'de', 'barcelon', '.', '¿', 'cre', 'que', 'podr', 'ven', 'a', 'recog', 'el', 'viern', '?', '\\n', 'depend', 'de', 'a', 'que', 'hor', 'ya', 'que', 'el', 'viern', 'trabaj', '.', '\\n', 'me', 'vendr', 'bien', 'entre', 'las', '17.00h', 'y', 'las', '19.00h', '.', '¿', 'com', 'lo', 'tien', '?', '\\n', 'lo', 'teng', 'complic', ',', 'acab', 'de', 'trabaj', 'a', 'las', '18.30', 'y', 'cre', 'que', 'no', 'me', 'dar', 'tiemp', '.', '¿', 'com', 'te', 'iri', 'el', 'sab', 'a', 'primer', 'hor', '?', '\\n', 'si', 'vin', 'antes', 'de', 'las', '9.00h', 'me', 'vendr', 'bien', '.', '\\n', 'pues', 'si', 'te', 'parec', 'bien', ',', 'te', 'avis', 'cuand', 'salg', 'de', 'barcelon', ',', 'sobr', 'las', '8.00h', ',', 'asi', 'cuand', 'lleg', 'ya', 'esta', 'tod', 'list', '.', '\\n', 'genial', 'alba', ',', 'qued', 'asi', ',', 'te', 'esper', 'el', 'sab', 'antes', 'de', 'las', '9.00h', '.']\n"
      ]
     }
    ],
    "source": [
     "#4\n",
-    "pure_stemmed = [word.rstrip(\"lo\") for word in tokeniced_text]\n",
-    "print(pure_stemmed)\n",
-    "#?????????????????????????????????????????"
+    "nlp =spacy.load(\"es_core_news_sm\")\n",
+    "doc = nlp(text)\n",
+    "spanish_stemmer = SnowballStemmer('spanish')\n",
+    "stemmedtext = [spanish_stemmer.stem(token.text) for token in doc]\n",
+    "print(stemmedtext)"
    ]
   },
   {
