S04 ex4 arreglo total, creo

--- a/S04_3_exercises_after.ipynb
+++ b/S04_3_exercises_after.ipynb
@@ -129,21 +129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['alquil', 'de', 'coch', '\\n', 'buen', 'tard', ',', 'soy', 'alba', '.', 'he', 'alquil', 'un', 'coch', 'par', 'el', 'proxim', 'fin', 'de', 'seman', 'y', 'me', 'gust', 'sab', 'dond', 'deb', 'recog', '.', 'yo', 'viv', 'en', 'barcelon', '.', '\\n', 'buen', 'tard', 'alba', ',', 'much', 'graci', 'por', 'llam', '.', 'yo', 'viv', 'en', 'un', 'puebl', 'a', '20', 'minut', 'de', 'barcelon', '.', '¿', 'cre', 'que', 'podr', 'ven', 'a', 'recog', 'el', 'viern', '?', '\\n', 'depend', 'de', 'a', 'que', 'hor', 'ya', 'que', 'el', 'viern', 'trabaj', '.', '\\n', 'me', 'vendr', 'bien', 'entre', 'las', '17.00h', 'y', 'las', '19.00h', '.', '¿', 'com', 'lo', 'tien', '?', '\\n', 'lo', 'teng', 'complic', ',', 'acab', 'de', 'trabaj', 'a', 'las', '18.30', 'y', 'cre', 'que', 'no', 'me', 'dar', 'tiemp', '.', '¿', 'com', 'te', 'iri', 'el', 'sab', 'a', 'primer', 'hor', '?', '\\n', 'si', 'vin', 'antes', 'de', 'las', '9.00h', 'me', 'vendr', 'bien', '.', '\\n', 'pues', 'si', 'te', 'parec', 'bien', ',', 'te', 'avis', 'cuand', 'salg', 'de', 'barcelon', ',', 'sobr', 'las', '8.00h', ',', 'asi', 'cuand', 'lleg', 'ya', 'esta', 'tod', 'list', '.', '\\n', 'genial', 'alba', ',', 'qued', 'asi', ',', 'te', 'esper', 'el', 'sab', 'antes', 'de', 'las', '9.00h', '.']\n"
+      "['alquil', 'de', 'coch', 'buen', 'tard', ' ', 'soy', 'alba', ' ', 'he', 'alquil', 'un', 'coch', 'par', 'el', 'pr', 'xim', 'fin', 'de', 'seman', 'y', 'me', 'gust', 'a', 'sab', 'd', 'nde', 'deb', 'recog', ' ', 'yo', 'viv', 'en', 'barcelon', ' ', 'buen', 'tard', 'alba', ' ', 'much', 'graci', 'por', 'llam', ' ', 'yo', 'viv', 'en', 'un', 'puebl', 'a', '20', 'minut', 'de', 'barcelon', '  ', 'cre', 'que', 'podr', 'as', 'ven', 'a', 'recog', 'el', 'viern', ' ', 'depend', 'de', 'a', 'qu', ' ', 'hor', 'ya', 'que', 'el', 'viern', 'trabaj', ' ', 'me', 'vendr', 'a', 'bien', 'entre', 'las', '17', '00h', 'y', 'las', '19', '00h', '  ', 'c', 'mo', 'lo', 'tien', ' ', 'lo', 'teng', 'complic', ' ', 'acab', 'de', 'trabaj', 'a', 'las', '18', '30', 'y', 'cre', 'que', 'no', 'me', 'dar', 'a', 'tiemp', '  ', 'c', 'mo', 'te', 'ir', 'a', 'el', 's', 'bad', 'a', 'primer', 'hor', ' ', 'si', 'vin', 'antes', 'de', 'las', '9', '00h', 'me', 'vendr', 'a', 'bien', ' ', 'pues', 'si', 'te', 'parec', 'bien', ' ', 'te', 'avis', 'cuand', 'salg', 'de', 'barcelon', ' ', 'sobr', 'las', '8', '00h', ' ', 'as', ' ', 'cuand', 'lleg', 'ya', 'est', ' ', 'tod', 'list', ' ', 'genial', 'alba', ' ', 'qued', 'as', '  ', 'te', 'esper', 'el', 's', 'bad', 'antes', 'de', 'las', '9', '00h']\n"
      ]
     }
    ],
    "source": [
     "#4\n",
     "nlp =spacy.load(\"es_core_news_sm\")\n",
-    "doc = nlp(text)\n",
+    "doc = nlp(clean_text)\n",
     "spanish_stemmer = SnowballStemmer('spanish')\n",
     "stemmedtext = [spanish_stemmer.stem(token.text) for token in doc]\n",
     "print(stemmedtext)"
