S04 arreglo de las tildes

--- a/S04_3_exercises_after.ipynb
+++ b/S04_3_exercises_after.ipynb
@@ -91,33 +91,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alquiler de coche buenas tardes  soy alba  he alquilado un coche para el pr ximo fin de semana y me gustar a saber d nde debo recogerlo  yo vivo en barcelona  buenas tardes alba  muchas gracias por llamar  yo vivo en un pueblo a 20 minutos de barcelona   crees que podr as venir a recogerlo el viernes  depende de a qu  hora ya que el viernes trabajo  me vendr a bien entre las 17 00h y las 19 00h   c mo lo tienes  lo tengo complicado  acabo de trabajar a las 18 30 y creo que no me dar a tiempo   c mo te ir a el s bado a primera hora  si vinieses antes de las 9 00h me vendr a bien  pues si te parece bien  te aviso cuando salga de barcelona  sobre las 8 00h  as  cuando llegues ya est  todo listo  genial alba  quedamos as   te espero el s bado antes de las 9 00h \n"
+      "alquiler de coche buenas tardes  soy alba  he alquilado un coche para el próximo fin de semana y me gustaría saber dónde debo recogerlo  yo vivo en barcelona  buenas tardes alba  muchas gracias por llamar  yo vivo en un pueblo a 20 minutos de barcelona   crees que podrías venir a recogerlo el viernes  depende de a qué hora ya que el viernes trabajo  me vendría bien entre las 17 00h y las 19 00h   cómo lo tienes  lo tengo complicado  acabo de trabajar a las 18 30 y creo que no me daría tiempo   cómo te iría el sábado a primera hora  si vinieses antes de las 9 00h me vendría bien  pues si te parece bien  te aviso cuando salga de barcelona  sobre las 8 00h  así cuando llegues ya está todo listo  genial alba  quedamos así  te espero el sábado antes de las 9 00h \n"
      ]
     }
    ],
    "source": [
     "#2\n",
-    "clean_text = re.sub(r'[^a-zA-Z0-9]', ' ', casefolded_text)\n",
+    "clean_text = re.sub(r'[^a-zA-Z0-9áéíóú]', ' ', casefolded_text)\n",
     "print(clean_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['alquiler', 'de', 'coche', 'buenas', 'tardes', 'soy', 'alba', 'he', 'alquilado', 'un', 'coche', 'para', 'el', 'pr', 'ximo', 'fin', 'de', 'semana', 'y', 'me', 'gustar', 'a', 'saber', 'd', 'nde', 'debo', 'recogerlo', 'yo', 'vivo', 'en', 'barcelona', 'buenas', 'tardes', 'alba', 'muchas', 'gracias', 'por', 'llamar', 'yo', 'vivo', 'en', 'un', 'pueblo', 'a', '20', 'minutos', 'de', 'barcelona', 'crees', 'que', 'podr', 'as', 'venir', 'a', 'recogerlo', 'el', 'viernes', 'depende', 'de', 'a', 'qu', 'hora', 'ya', 'que', 'el', 'viernes', 'trabajo', 'me', 'vendr', 'a', 'bien', 'entre', 'las', '17', '00h', 'y', 'las', '19', '00h', 'c', 'mo', 'lo', 'tienes', 'lo', 'tengo', 'complicado', 'acabo', 'de', 'trabajar', 'a', 'las', '18', '30', 'y', 'creo', 'que', 'no', 'me', 'dar', 'a', 'tiempo', 'c', 'mo', 'te', 'ir', 'a', 'el', 's', 'bado', 'a', 'primera', 'hora', 'si', 'vinieses', 'antes', 'de', 'las', '9', '00h', 'me', 'vendr', 'a', 'bien', 'pues', 'si', 'te', 'parece', 'bien', 'te', 'aviso', 'cuando', 'salga', 'de', 'barcelona', 'sobre', 'las', '8', '00h', 'as', 'cuando', 'llegues', 'ya', 'est', 'todo', 'listo', 'genial', 'alba', 'quedamos', 'as', 'te', 'espero', 'el', 's', 'bado', 'antes', 'de', 'las', '9', '00h']\n"
+      "['alquiler', 'de', 'coche', 'buenas', 'tardes', 'soy', 'alba', 'he', 'alquilado', 'un', 'coche', 'para', 'el', 'próximo', 'fin', 'de', 'semana', 'y', 'me', 'gustaría', 'saber', 'dónde', 'debo', 'recogerlo', 'yo', 'vivo', 'en', 'barcelona', 'buenas', 'tardes', 'alba', 'muchas', 'gracias', 'por', 'llamar', 'yo', 'vivo', 'en', 'un', 'pueblo', 'a', '20', 'minutos', 'de', 'barcelona', 'crees', 'que', 'podrías', 'venir', 'a', 'recogerlo', 'el', 'viernes', 'depende', 'de', 'a', 'qué', 'hora', 'ya', 'que', 'el', 'viernes', 'trabajo', 'me', 'vendría', 'bien', 'entre', 'las', '17', '00h', 'y', 'las', '19', '00h', 'cómo', 'lo', 'tienes', 'lo', 'tengo', 'complicado', 'acabo', 'de', 'trabajar', 'a', 'las', '18', '30', 'y', 'creo', 'que', 'no', 'me', 'daría', 'tiempo', 'cómo', 'te', 'iría', 'el', 'sábado', 'a', 'primera', 'hora', 'si', 'vinieses', 'antes', 'de', 'las', '9', '00h', 'me', 'vendría', 'bien', 'pues', 'si', 'te', 'parece', 'bien', 'te', 'aviso', 'cuando', 'salga', 'de', 'barcelona', 'sobre', 'las', '8', '00h', 'así', 'cuando', 'llegues', 'ya', 'está', 'todo', 'listo', 'genial', 'alba', 'quedamos', 'así', 'te', 'espero', 'el', 'sábado', 'antes', 'de', 'las', '9', '00h']\n"
      ]
     }
    ],
@@ -129,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['alquil', 'de', 'coch', 'buen', 'tard', ' ', 'soy', 'alba', ' ', 'he', 'alquil', 'un', 'coch', 'par', 'el', 'pr', 'xim', 'fin', 'de', 'seman', 'y', 'me', 'gust', 'a', 'sab', 'd', 'nde', 'deb', 'recog', ' ', 'yo', 'viv', 'en', 'barcelon', ' ', 'buen', 'tard', 'alba', ' ', 'much', 'graci', 'por', 'llam', ' ', 'yo', 'viv', 'en', 'un', 'puebl', 'a', '20', 'minut', 'de', 'barcelon', '  ', 'cre', 'que', 'podr', 'as', 'ven', 'a', 'recog', 'el', 'viern', ' ', 'depend', 'de', 'a', 'qu', ' ', 'hor', 'ya', 'que', 'el', 'viern', 'trabaj', ' ', 'me', 'vendr', 'a', 'bien', 'entre', 'las', '17', '00h', 'y', 'las', '19', '00h', '  ', 'c', 'mo', 'lo', 'tien', ' ', 'lo', 'teng', 'complic', ' ', 'acab', 'de', 'trabaj', 'a', 'las', '18', '30', 'y', 'cre', 'que', 'no', 'me', 'dar', 'a', 'tiemp', '  ', 'c', 'mo', 'te', 'ir', 'a', 'el', 's', 'bad', 'a', 'primer', 'hor', ' ', 'si', 'vin', 'antes', 'de', 'las', '9', '00h', 'me', 'vendr', 'a', 'bien', ' ', 'pues', 'si', 'te', 'parec', 'bien', ' ', 'te', 'avis', 'cuand', 'salg', 'de', 'barcelon', ' ', 'sobr', 'las', '8', '00h', ' ', 'as', ' ', 'cuand', 'lleg', 'ya', 'est', ' ', 'tod', 'list', ' ', 'genial', 'alba', ' ', 'qued', 'as', '  ', 'te', 'esper', 'el', 's', 'bad', 'antes', 'de', 'las', '9', '00h']\n"
+      "['alquil', 'de', 'coch', 'buen', 'tard', ' ', 'soy', 'alba', ' ', 'he', 'alquil', 'un', 'coch', 'par', 'el', 'proxim', 'fin', 'de', 'seman', 'y', 'me', 'gust', 'sab', 'dond', 'deb', 'recog', ' ', 'yo', 'viv', 'en', 'barcelon', ' ', 'buen', 'tard', 'alba', ' ', 'much', 'graci', 'por', 'llam', ' ', 'yo', 'viv', 'en', 'un', 'puebl', 'a', '20', 'minut', 'de', 'barcelon', '  ', 'cre', 'que', 'podr', 'ven', 'a', 'recog', 'el', 'viern', ' ', 'depend', 'de', 'a', 'que', 'hor', 'ya', 'que', 'el', 'viern', 'trabaj', ' ', 'me', 'vendr', 'bien', 'entre', 'las', '17', '00h', 'y', 'las', '19', '00h', '  ', 'com', 'lo', 'tien', ' ', 'lo', 'teng', 'complic', ' ', 'acab', 'de', 'trabaj', 'a', 'las', '18', '30', 'y', 'cre', 'que', 'no', 'me', 'dar', 'tiemp', '  ', 'com', 'te', 'iri', 'el', 'sab', 'a', 'primer', 'hor', ' ', 'si', 'vin', 'antes', 'de', 'las', '9', '00h', 'me', 'vendr', 'bien', ' ', 'pues', 'si', 'te', 'parec', 'bien', ' ', 'te', 'avis', 'cuand', 'salg', 'de', 'barcelon', ' ', 'sobr', 'las', '8', '00h', ' ', 'asi', 'cuand', 'lleg', 'ya', 'esta', 'tod', 'list', ' ', 'genial', 'alba', ' ', 'qued', 'asi', ' ', 'te', 'esper', 'el', 'sab', 'antes', 'de', 'las', '9', '00h']\n"
      ]
     }
    ],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -194,22 +194,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Alquiler', 'PROPN'), ('de', 'ADP'), ('coche', 'NOUN'), ('\\n', 'SPACE'), ('Buenas', 'PROPN'), ('tardes', 'NOUN'), (',', 'PUNCT'), ('soy', 'AUX'), ('Alba', 'PROPN'), ('.', 'PUNCT'), ('He', 'AUX'), ('alquilado', 'VERB'), ('un', 'DET'), ('coche', 'NOUN'), ('para', 'ADP'), ('el', 'DET'), ('próximo', 'ADJ'), ('fin', 'NOUN'), ('de', 'ADP'), ('semana', 'NOUN'), ('y', 'CCONJ'), ('me', 'PRON'), ('gustaría', 'VERB'), ('saber', 'AUX'), ('dónde', 'PRON'), ('debo', 'AUX'), ('recogerlo', 'VERB'), ('.', 'PUNCT'), ('Yo', 'PRON'), ('vivo', 'VERB'), ('en', 'ADP'), ('Barcelona', 'PROPN'), ('.', 'PUNCT'), ('\\n', 'SPACE'), ('Buenas', 'PROPN'), ('tardes', 'NOUN'), ('Alba', 'PROPN'), (',', 'PUNCT'), ('muchas', 'PRON'), ('gracias', 'NOUN'), ('por', 'ADP'), ('llamar', 'VERB'), ('.', 'PUNCT'), ('Yo', 'PRON'), ('vivo', 'VERB'), ('en', 'ADP'), ('un', 'DET'), ('pueblo', 'NOUN'), ('a', 'ADP'), ('20', 'NUM'), ('minutos', 'NOUN'), ('de', 'ADP'), ('Barcelona', 'PROPN'), ('.', 'PUNCT'), ('¿', 'PUNCT'), ('Crees', 'PROPN'), ('que', 'SCONJ'), ('podrías', 'NOUN'), ('venir', 'VERB'), ('a', 'ADP'), ('recogerlo', 'VERB'), ('el', 'DET'), ('viernes', 'NOUN'), ('?', 'PUNCT'), ('\\n', 'SPACE'), ('Depende', 'VERB'), ('de', 'ADP'), ('a', 'ADP'), ('qué', 'PRON'), ('hora', 'NOUN'), ('ya', 'ADV'), ('que', 'SCONJ'), ('el', 'DET'), ('viernes', 'NOUN'), ('trabajo', 'ADJ'), ('.', 'PUNCT'), ('\\n', 'SPACE'), ('Me', 'PRON'), ('vendría', 'VERB'), ('bien', 'ADV'), ('entre', 'ADP'), ('las', 'DET'), ('17.00h', 'NUM'), ('y', 'CCONJ'), ('las', 'DET'), ('19.00h', 'NUM'), ('.', 'PUNCT'), ('¿', 'PUNCT'), ('Cómo', 'PRON'), ('lo', 'PRON'), ('tienes', 'VERB'), ('?', 'PUNCT'), ('\\n', 'SPACE'), ('Lo', 'PRON'), ('tengo', 'VERB'), ('complicado', 'ADJ'), (',', 'PUNCT'), ('acabo', 'VERB'), ('de', 'ADP'), ('trabajar', 'VERB'), ('a', 'ADP'), ('las', 'DET'), ('18.30', 'NOUN'), ('y', 'CCONJ'), ('creo', 'VERB'), ('que', 'SCONJ'), ('no', 'ADV'), ('me', 'PRON'), ('daría', 'VERB'), ('tiempo', 'NOUN'), ('.', 'PUNCT'), ('¿', 'PUNCT'), ('Cómo', 'PRON'), ('te', 'PRON'), ('iría', 'VERB'), ('el', 'DET'), ('sábado', 'NOUN'), ('a', 'ADP'), ('primera', 'ADJ'), ('hora', 'NOUN'), ('?', 'PUNCT'), ('\\n', 'SPACE'), ('Si', 'SCONJ'), ('vinieses', 'NOUN'), ('antes', 'ADV'), ('de', 'ADP'), ('las', 'DET'), ('9.00h', 'NOUN'), ('me', 'PRON'), ('vendría', 'VERB'), ('bien', 'ADV'), ('.', 'PUNCT'), ('\\n', 'SPACE'), ('Pues', 'NOUN'), ('si', 'SCONJ'), ('te', 'PRON'), ('parece', 'VERB'), ('bien', 'ADV'), (',', 'PUNCT'), ('te', 'PRON'), ('aviso', 'VERB'), ('cuando', 'SCONJ'), ('salga', 'VERB'), ('de', 'ADP'), ('Barcelona', 'PROPN'), (',', 'PUNCT'), ('sobre', 'ADP'), ('las', 'DET'), ('8.00h', 'PROPN'), (',', 'PUNCT'), ('así', 'ADV'), ('cuando', 'SCONJ'), ('llegues', 'PROPN'), ('ya', 'ADV'), ('está', 'AUX'), ('todo', 'PRON'), ('listo', 'ADJ'), ('.', 'PUNCT'), ('\\n', 'SPACE'), ('Genial', 'PROPN'), ('Alba', 'PROPN'), (',', 'PUNCT'), ('quedamos', 'VERB'), ('así', 'ADV'), (',', 'PUNCT'), ('te', 'PRON'), ('espero', 'VERB'), ('el', 'DET'), ('sábado', 'NOUN'), ('antes', 'ADV'), ('de', 'ADP'), ('las', 'DET'), ('9.00h', 'NOUN'), ('.', 'PUNCT')]\n"
+      "[('alquiler', 'NOUN'), ('de', 'ADP'), ('coche', 'NOUN'), ('buenas', 'ADJ'), ('tardes', 'NOUN'), (' ', 'SPACE'), ('soy', 'AUX'), ('alba', 'NOUN'), (' ', 'SPACE'), ('he', 'AUX'), ('alquilado', 'VERB'), ('un', 'DET'), ('coche', 'NOUN'), ('para', 'ADP'), ('el', 'DET'), ('próximo', 'ADJ'), ('fin', 'NOUN'), ('de', 'ADP'), ('semana', 'NOUN'), ('y', 'CCONJ'), ('me', 'PRON'), ('gustaría', 'VERB'), ('saber', 'AUX'), ('dónde', 'PRON'), ('debo', 'AUX'), ('recogerlo', 'VERB'), (' ', 'SPACE'), ('yo', 'PRON'), ('vivo', 'VERB'), ('en', 'ADP'), ('barcelona', 'PROPN'), (' ', 'SPACE'), ('buenas', 'ADJ'), ('tardes', 'NOUN'), ('alba', 'VERB'), (' ', 'SPACE'), ('muchas', 'DET'), ('gracias', 'NOUN'), ('por', 'ADP'), ('llamar', 'VERB'), (' ', 'SPACE'), ('yo', 'PRON'), ('vivo', 'VERB'), ('en', 'ADP'), ('un', 'DET'), ('pueblo', 'NOUN'), ('a', 'ADP'), ('20', 'NUM'), ('minutos', 'NOUN'), ('de', 'ADP'), ('barcelona', 'PROPN'), ('  ', 'SPACE'), ('crees', 'NOUN'), ('que', 'SCONJ'), ('podrías', 'NOUN'), ('venir', 'VERB'), ('a', 'ADP'), ('recogerlo', 'VERB'), ('el', 'DET'), ('viernes', 'NOUN'), (' ', 'SPACE'), ('depende', 'VERB'), ('de', 'ADP'), ('a', 'ADP'), ('qué', 'PRON'), ('hora', 'NOUN'), ('ya', 'ADV'), ('que', 'SCONJ'), ('el', 'DET'), ('viernes', 'NOUN'), ('trabajo', 'NOUN'), (' ', 'SPACE'), ('me', 'PRON'), ('vendría', 'VERB'), ('bien', 'ADV'), ('entre', 'ADP'), ('las', 'DET'), ('17', 'NUM'), ('00h', 'NUM'), ('y', 'CCONJ'), ('las', 'DET'), ('19', 'NUM'), ('00h', 'NUM'), ('  ', 'SPACE'), ('cómo', 'PRON'), ('lo', 'PRON'), ('tienes', 'VERB'), (' ', 'SPACE'), ('lo', 'PRON'), ('tengo', 'AUX'), ('complicado', 'ADJ'), (' ', 'SPACE'), ('acabo', 'VERB'), ('de', 'ADP'), ('trabajar', 'VERB'), ('a', 'ADP'), ('las', 'DET'), ('18', 'NUM'), ('30', 'NUM'), ('y', 'CCONJ'), ('creo', 'VERB'), ('que', 'SCONJ'), ('no', 'ADV'), ('me', 'PRON'), ('daría', 'VERB'), ('tiempo', 'NOUN'), ('  ', 'SPACE'), ('cómo', 'PRON'), ('te', 'PRON'), ('iría', 'VERB'), ('el', 'DET'), ('sábado', 'NOUN'), ('a', 'ADP'), ('primera', 'ADJ'), ('hora', 'NOUN'), (' ', 'SPACE'), ('si', 'SCONJ'), ('vinieses', 'NOUN'), ('antes', 'ADV'), ('de', 'ADP'), ('las', 'DET'), ('9', 'NUM'), ('00h', 'NUM'), ('me', 'PRON'), ('vendría', 'VERB'), ('bien', 'ADV'), (' ', 'SPACE'), ('pues', 'SCONJ'), ('si', 'SCONJ'), ('te', 'PRON'), ('parece', 'VERB'), ('bien', 'ADV'), (' ', 'SPACE'), ('te', 'PRON'), ('aviso', 'VERB'), ('cuando', 'SCONJ'), ('salga', 'VERB'), ('de', 'ADP'), ('barcelona', 'PROPN'), (' ', 'SPACE'), ('sobre', 'ADP'), ('las', 'DET'), ('8', 'NUM'), ('00h', 'NUM'), (' ', 'SPACE'), ('así', 'ADV'), ('cuando', 'SCONJ'), ('llegues', 'PROPN'), ('ya', 'ADV'), ('está', 'AUX'), ('todo', 'PRON'), ('listo', 'ADJ'), (' ', 'SPACE'), ('genial', 'ADJ'), ('alba', 'NOUN'), (' ', 'SPACE'), ('quedamos', 'VERB'), ('así', 'ADV'), (' ', 'SPACE'), ('te', 'PRON'), ('espero', 'VERB'), ('el', 'DET'), ('sábado', 'NOUN'), ('antes', 'ADV'), ('de', 'ADP'), ('las', 'DET'), ('9', 'NUM'), ('00h', 'NUM')]\n"
      ]
     }
    ],
    "source": [
     "#7\n",
     "nlp = es_core_news_sm.load()\n",
-    "doc = nlp(text)\n",
+    "doc = nlp(clean_text)\n",
     "print([(w.text, w.pos_) for w in doc]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#8\n"
    ]
   }
  ],
